--- a/container/pom.xml
+++ b/container/pom.xml
@@ -3,17 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.breeze</groupId>
+        <artifactId>breeze</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.breeze</groupId>
-    <artifactId>breeze</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>commons</module>
-        <module>orm</module>
-        <module>web-mvc</module>
-        <module>container</module>
-    </modules>
+    <groupId>org.example</groupId>
+    <artifactId>container</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
