--- a/web-mvc/pom.xml
+++ b/web-mvc/pom.xml
@@ -6,8 +6,16 @@
         <artifactId>breeze</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>org.example</groupId>
+    <groupId>com.breeze.web</groupId>
     <artifactId>web-mvc</artifactId>
-    <name>Archetype - web-mvc</name>
-    <url>http://maven.apache.org</url>
+    <name>web-mvc</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>9.0.86</version>
+            <scope>package</scope>
+        </dependency>
+    </dependencies>
 </project>
