--- a/user-web/pom.xml
+++ b/user-web/pom.xml
@@ -9,12 +9,21 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>container</artifactId>
+    <groupId>com.breeze</groupId>
+    <artifactId>user-web</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+<!--        <dependency>-->
+<!--            <groupId>com.breeze</groupId>-->
+<!--            <artifactId>container</artifactId>-->
+<!--            <version>1.0</version>-->
+<!--        </dependency>-->
+    </dependencies>
 
 </project>
