--- a/user-web/pom.xml
+++ b/user-web/pom.xml
@@ -19,11 +19,17 @@
     </properties>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>com.breeze</groupId>-->
-<!--            <artifactId>container</artifactId>-->
-<!--            <version>1.0</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.breeze</groupId>
+            <artifactId>framework</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.breeze</groupId>
+            <artifactId>boot</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
