--- a/container/pom.xml
+++ b/container/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>container</artifactId>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
