--- a/container/boot/pom.xml
+++ b/container/boot/pom.xml
@@ -19,5 +19,12 @@
             <artifactId>framework</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.breeze.web</groupId>
+            <artifactId>web-mvc</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
